kustomize/homer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-nodeport
  namespace: homer
spec:
  type: NodePort
  selector:
    app: homepage   # match whatever label your homepage Deployment actually uses
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30300   # pick anything in the 30000-32767 range that's free
